# moltis

./: .gitignore  Cargo.toml
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/src/: lib.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: server.rs  services.rs  session.rs
crates/gateway/src/methods/: services.rs
crates/skills/: Cargo.toml
crates/skills/bundled/code-review/: SKILL.md
crates/skills/bundled/commit/: SKILL.md
crates/skills/bundled/debug/: SKILL.md
crates/skills/bundled/doc-gen/: SKILL.md
crates/skills/bundled/explain/: SKILL.md
crates/skills/bundled/refactor/: SKILL.md
crates/skills/bundled/skill-creator/: SKILL.md
crates/skills/bundled/test-gen/: SKILL.md
crates/skills/src/: bundled.rs  external_registry.rs  featured-skills.json  install.rs  lib.rs
crates/web/src/: api.rs  lib.rs
crates/web/src/assets/css/: components.css
crates/web/src/assets/js/: app.js  page-skills.js  sessions.js  websocket.js
crates/web/src/assets/js/stores/: session-store.js
docs/: architecture-and-desktop.md  tauri-desktop-plan.md
